# kflow

./: .env.example  .gitignore  .kerjaflow_progress.json  .kerjaflow_uiux_progress.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  REPLAY_AUDIT.sh  codecov.yml  install-kbs.sh
.kbs/: config.yaml  kbs.sh
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/kerjaflow/: __init__.py
backend/kerjaflow/models/: __init__.py  statutory.py
backend/kerjaflow/services/: __init__.py  statutory_calculator.py
backend/kerjaflow/tests/: __init__.py  conftest.py  test_all_countries.py  test_malaysia_statutory.py  test_singapore_statutory.py
backend/kerjaflow/utils/: __init__.py
backend/odoo/addons/kerjaflow/: __init__.py  __manifest__.py  config.py  hooks.py
backend/odoo/addons/kerjaflow/controllers/: __init__.py  approval_controller.py  auth_controller.py  document_controller.py  leave_controller.py  main.py  notification_controller.py  payslip_controller.py  privacy_controller.py  profile_controller.py
backend/odoo/addons/kerjaflow/data/: kf_leave_type_data.xml  kf_public_holiday_data.xml
backend/odoo/addons/kerjaflow/data/demo/: kf_company_demo.xml  kf_employee_demo.xml
backend/odoo/addons/kerjaflow/models/: __init__.py  compliance.py  kf_audit_log.py  kf_company.py  kf_country_config.py  kf_department.py  kf_document.py  kf_employee.py  kf_foreign_worker_detail.py  kf_job_position.py  kf_leave_balance.py  kf_leave_request.py  kf_leave_type.py  kf_notification.py  kf_payslip.py  kf_payslip_line.py  kf_public_holiday.py  kf_statutory_rate.py  kf_user.py  kf_user_device.py
backend/odoo/addons/kerjaflow/security/: ir.model.access.csv  kerjaflow_groups.xml  kerjaflow_security.xml
backend/odoo/addons/kerjaflow/tests/: __init__.py  common.py  test_audit.py  test_document.py  test_employee.py  test_leave.py  test_notification.py  test_payslip.py  test_user.py
backend/odoo/addons/kerjaflow/tests/integration/: __init__.py  test_approval_workflow.py  test_auth_api.py  test_leave_api.py  test_payslip_api.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: __init__.py  test_approval.py  test_authentication.py  test_document.py  test_leave.py  test_models.py  test_notification.py  test_payslip.py  test_profile.py  test_statutory_calculator.py
docs/: KEJA_REMEDIATION_REQUIREMENTS.md  install-kbs-v2.sh  (+4 more)
(+396 files in other folders)
